substrate/frame/support/test/tests/pallet_ui/config_metadata_non_type_info.stderr
error: Invalid #[pallet::include_metadata] in #[pallet::config], collected type `MyNonScaleTypeInfo` does not implement `TypeInfo` or `Parameter`
  --> tests/pallet_ui/config_metadata_non_type_info.rs:28:4
   |
28 |         #[pallet::include_metadata]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^
